--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                         <div id="w-developer" class="web">
                             <i class="fa-solid fa-globe"></i>
                             <p>Web Developer</p>
-                            <p class="web-desc" id="paaa">
-                                Crio interfaces de sites ou aplicativos que se adaptam a qualquer dispositivo garantindo uma experiência de usuário intuitiva e agradável, através de tecnologias modernas como HTML, CSS, JavaScript e ReactJS. Capaz de trabalhar em equipe, entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto. Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área além de possuir habilidades para resolução de problemas.
+                            <p class="web-desc">
+                                Crio interfaces de sites ou aplicativos que se adaptam a qualquer dispositivo garantindo uma experiência de usuário intuitiva e agradável, através de tecnologias modernas como HTML, CSS, JavaScript e ReactJS. Capaz de trabalhar em equipe,<span id="mais">...ver mais</span><span id="texto"> entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto. Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área além de possuir habilidades para resolução de problemas.<span id="menos">ver menos</span>
+                                </span>
                             </p>
                         </div>
                     </div>
@@ -82,7 +83,9 @@
                             <i class="fa-solid fa-pen-to-square"></i>
                             <p>Web designer</p>
                             <p class="web-desc">
+                                <!--
                                 Estudando o Web Design a pouco tempo, o ojetivo é ganhar habilidades para desenhar o visual de interfaces de usuário intuitivas e funcionais. Quero entender como as interfaces são projetadas antes de ser implementadas, usando ferramentas como o Figma. Apaixonando pela área a cada aprendizado, pretendo criar visuais focados no equilíbrio entre estética, funcionalidade e qualidade.
+                                -->
                             </p>
                         </div>
                     </div>
