Início da implementação da seção de PROJETOS

--- a/index.html
+++ b/index.html
@@ -214,6 +214,96 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-sass.png" alt="Logo do Sass">
+                                <span>Sass</span>
+                                <div class="content">
+                                    <h1>Sass</h1>
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-tailCSS.png" alt="Logo do Tailwind CSS">
+                                <span>Tailwind CSS</span>
+                                <div class="content">
+                                    <h1>Tailwind CSS</h1>
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-ts.jpg" alt="Logo do TypeScript">
+                                <span>TypeScript</span>
+                                <div class="content">
+                                    <h1>TypeScript</h1>
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-next.jpg" alt="Logo do Next.JS">
+                                <span>Next.JS</span>
+                                <div class="content">
+                                    <h1>Next.JS</h1>
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-jQuery.png" alt="Logo do jQuery">
+                                <span>jQuery</span>
+                                <div class="content">
+                                    <h1>jQuery</h1>
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="wrapper">
+                            <div class="image">
+                                <img src="img/logo-restAPI.png" alt="Logo do RESTful API">
+                                <span>RESTful API</span>
+                                <div class="content">
+                                    <h1>RESTful API</h1>
+                                    <p>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure veritatis delectus omnis magnam soluta dolore aliquam eveniet quos, sed error voluptate incidunt eos ratione eligendi 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- If we need navigation buttons -->
                 <div class="swiper-button-next"></div>
@@ -223,7 +313,82 @@
         </div>
     </section>
     <section id="experiencia"></section>
-    <section id="projetos"></section>
+    <section id="projetos">
+        <h2>Projetos</h2>
+        <div class="bolinhas">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="modelos-projeto">
+            <ul aria-label="Navegação entre modelos específicos de projeto">
+                <li>Todos</li>
+                <li>WebSites</li>
+                <li>UI Design</li>
+                <li>Outros</li>
+            </ul>
+        </div>
+        <div class="armazenamento-projetos">
+            <ul aria-label="Navegação entre os modelos de projeto">
+                <li>
+                    <a href="https://calculadora-six-khaki.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/calculadora.png" alt="imagem de uma calculadora">
+                        <p class="techs">#HTML #CSS #JS</p>
+                    </a>
+                    <a href="https://github.com/vandinelsonrocha/8-calculadora" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/formulario-de-cliente.png" alt="imagem de um formulário de cliente">
+                        <p class="techs">#HTML #CSS #PHP</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/jogo-da-sorte.png" alt="imagem da interface de um jogo">
+                        <p class="techs">#HTML #CSS #JS</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/formulario.png" alt="imagem de um formulário">
+                        <p class="techs">#HTML #CSS #JS</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/site-advogados.png" alt="imagem de uma parte da interface de um site de advogados">
+                        <p class="techs">#HTML #CSS</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="img/site-viagens.png" alt="imagem de uma parte da interface de um site de viagens">
+                        <p class="techs">#HTML #CSS</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="#" alt="">
+                        <p class="techs">#</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+                <li>
+                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                        <img src="#" alt="">
+                        <p class="techs">#</p>
+                    </a>
+                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                </li>
+            </ul>
+        </div>
+    </section>
     <footer id="contato"></footer>
  
     <!--LINK ÍCONES DO IONICONS-->
