Conclusão da seção de PROJETOS

--- a/index.html
+++ b/index.html
@@ -322,70 +322,114 @@
         </div>
         <div class="modelos-projeto">
             <ul aria-label="Navegação entre modelos específicos de projeto">
-                <li>Todos</li>
-                <li>WebSites</li>
-                <li>UI Design</li>
-                <li>Outros</li>
+                <li id="todos" class="ativo">Todos</li>
+                <li id="website">WebSites</li>
+                <li id="design">UI Design</li>
+                <li id="outros">Outros</li>
             </ul>
         </div>
         <div class="armazenamento-projetos">
             <ul aria-label="Navegação entre os modelos de projeto">
-                <li>
+                <li class="projeto outros">
                     <a href="https://calculadora-six-khaki.vercel.app/" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/calculadora.png" alt="imagem de uma calculadora">
-                        <p class="techs">#HTML #CSS #JS</p>
+                        <p class="techs">#html #css #js</p>
                     </a>
                     <a href="https://github.com/vandinelsonrocha/8-calculadora" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li>
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
+                <li class="projeto outros">
+                    <div href="" class="imagem-projeto">
                         <img src="img/formulario-de-cliente.png" alt="imagem de um formulário de cliente">
-                        <p class="techs">#HTML #CSS #PHP</p>
-                    </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                        <p class="backend">Backend</p>
+                        <p class="techs">#html #css #php</p>
+                    </div>
+                    <a href="" class="repositorio repositorio-back" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li>
+                <li class="projeto outros">
                     <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/jogo-da-sorte.png" alt="imagem da interface de um jogo">
-                        <p class="techs">#HTML #CSS #JS</p>
+                        <p class="techs">#html #css #js</p>
                     </a>
                     <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li>
+                <li class="projeto outros">
                     <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/formulario.png" alt="imagem de um formulário">
-                        <p class="techs">#HTML #CSS #JS</p>
+                        <p class="techs">#html #css #js</p>
                     </a>
                     <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li>
+                <li class="projeto website">
                     <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/site-advogados.png" alt="imagem de uma parte da interface de um site de advogados">
-                        <p class="techs">#HTML #CSS</p>
+                        <p class="techs">#html #css</p>
                     </a>
                     <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li>
+                <li class="projeto website">
                     <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
                         <img src="img/site-viagens.png" alt="imagem de uma parte da interface de um site de viagens">
-                        <p class="techs">#HTML #CSS</p>
+                        <p class="techs">#html #css</p>
                     </a>
                     <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li>
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
-                        <img src="#" alt="">
-                        <p class="techs">#</p>
-                    </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                <li class="projeto design">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
                 </li>
-                <li>
-                    <a href="" class="imagem-projeto" title="clica para ver o deploy" target="_blank" rel="external">
-                        <img src="#" alt="">
-                        <p class="techs">#</p>
-                    </a>
-                    <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
+                <li class="projeto design">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
                 </li>
+                <li class="projeto website">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
+                </li>
+                <li class="projeto website">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
+                </li>
+                <li class="projeto design">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
+                </li>
+                <li class="projeto design">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
+                </li>
+                <li class="projeto outros">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
+                </li>
+                <li class="projeto outros">
+                    <div class="imagem-projeto">
+                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
+                        <p class="techs"></p>
+                    </div>
+                    <div class="repositorio">Repositório</div>
+                </li>
+                <button id="mostrar">Mostrar mais</button>
             </ul>
         </div>
     </section>
