Trabalhando a responsividade mobile na  seção de INÍCIO

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <header class="max">
             <h1 id="logo">&lt;Port<span>fólio/&gt;</span></h1>
             <div>
-                <nav>
+                <nav class="nav-container">
                     <ul class="nav-primaria">
                         <li><a href="#inicio">Início</a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#habilidades">Habilidades</a></li>
-                        <li><a href="#experiencia">Experiência</a></li>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#contato">Contato</a></li>
                     </ul>
+                    <i class="fa-solid fa-bars"></i>
                 </nav>
                 <img src="img/sun.png" id="sun" alt="Imagem da lua">
             </div>
@@ -39,7 +39,7 @@
         <section aria-label="seção currículo download Vandinelson" class="section-div">
             <div>
                 <h2 class="apresentacao">Olá, meu nome é <span id="meuNome">Vandinelson Gomes</span></h2>
-                <h2 class="apresentacao" id="digitando">Desenvolvedor Web Frontend | UI Designer</h2>
+                <h2 class="apresentacao" id="digitando">Desenvolvedor Web Frontend</h2>
                 <p class="apresentacao">
                     Este é o meu site oficial de portfólio para mostrar todos os meus trabalhos relacionados com o desenvolvimento web e UI design.
                 </p>
@@ -102,7 +102,7 @@
                     </dialog>
                     <div id="mais-infos">
                         <address><i class="fa-solid fa-location-dot"></i> Cabo Verde - São Vicente</address>
-                        <p><i class="fa-solid fa-calendar-days"></i> +238 9963939</p>
+                        <p><i class="fa-solid fa-phone"></i> +238 9963939</p>
                         <p><i class="fa-solid fa-envelope"></i> vandInforma.tic@gmail.com</p>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
         <ul id="footer-navegacao">
             <li id="localizacao">
                 <address><i class="fa-solid fa-location-dot"></i> Cabo Verde - São Vicente</address>
-                <p><i class="fa-solid fa-calendar-days"></i> +238 9963939</p>
+                <p><i class="fa-solid fa-phone"></i> +238 9963939</p>
                 <p><i class="fa-solid fa-envelope"></i> vandInforma.tic@gmail.com</p>
             </li>
             <li id="navegacao">
