--- a/index.html
+++ b/index.html
@@ -65,31 +65,10 @@
             <div id="imagem-fundo"></div>
             <div>
                 <p id="nome">Vandinelson Gomes</p>
-                <p class="sobre-mim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum animi aspernatur accusantium sunt molestias pariatur voluptatibus, earum modi est autem quam incidunt minus deserunt ad asperiores illum quis cupiditate consequatur?
-                Praesentium aut, voluptatibus illo nisi, ex blanditiis vitae quis fuga, atque nostrum nesciunt voluptatum reprehenderit inventore repudiandae minus pariatur nobis illum totam corrupti asperiores? Consectetur illo natus dicta quo tempore?</p>
-                <div id="dev" class="sobre-mim">
-                    <div class="box">
-                        <div id="w-developer" class="web">
-                            <i class="fa-solid fa-globe"></i>
-                            <p>Web Developer</p>
-                            <p class="web-desc">
-                                Crio interfaces de sites ou aplicativos que se adaptam a qualquer dispositivo garantindo uma experiência de usuário intuitiva e agradável, através de tecnologias modernas como HTML, CSS, JavaScript e ReactJS. Capaz de trabalhar em equipe,<span id="mais">...ver mais</span><span id="texto"> entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto. Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área além de possuir habilidades para resolução de problemas.<span id="menos">ver menos</span>
-                                </span>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div id="w-designer" class="web">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                            <p>Web designer</p>
-                            <p class="web-desc">
-                                <!--
-                                Estudando o Web Design a pouco tempo, o ojetivo é ganhar habilidades para desenhar o visual de interfaces de usuário intuitivas e funcionais. Quero entender como as interfaces são projetadas antes de ser implementadas, usando ferramentas como o Figma. Apaixonando pela área a cada aprendizado, pretendo criar visuais focados no equilíbrio entre estética, funcionalidade e qualidade.
-                                -->
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <p class="texto-sobre">
+                    Crio interfaces de sites ou aplicativos que se adaptam a qualquer dispositivo garantindo uma experiência de usuário intuitiva e agradável, através de tecnologias modernas como HTML, CSS, JavaScript e ReactJS. Capaz de trabalhar em equipe,<span id="mais">...ver mais</span><span id="texto"> entender os requisitos e as necessidades dos clientes e colaborar com designers, como também todos os profissionais envolvidos no projeto. Sou uma pessoa que busca sempre a criatividade, em contante aprendizado para garantir as melhores práticas e manter sempre atualizado para acompanhar as tendências da área além de possuir habilidades para resolução de problemas.<span id="menos">ver menos</span>
+                    </span>
+                </p>
                 <div id="form-infos">
                     <button id="formacao" class="sobre-mim">Formação académica</button>
                     <dialog id="dialog">
@@ -474,7 +453,6 @@
                 <a href="#inicio">Início</a>
                 <a href="#sobre">Sobre</a>
                 <a href="#habilidades">Habilidades</a>
-                <a href="#experiencia">Experiência</a>
                 <a href="#projetos">Projetos</a>
                 <a href="#contato">Contato</a>
             </li>
