--- a/index.html
+++ b/index.html
@@ -43,12 +43,18 @@
                 <p class="apresentacao">
                     Este é o meu site oficial de portfólio para mostrar todos os meus trabalhos relacionados com o desenvolvimento web e UI design.
                 </p>
-                <div id="redes-sociais">
-                    <a href="https://github.com/vandinelsonrocha" target="_blank" rel="external"><ion-icon name="logo-github"></ion-icon></a>
-                    <a href="https://www.linkedin.com/in/vandy-gomes/" target="_blank" rel="external"><ion-icon name="logo-linkedin"></ion-icon></a>
-                    <a href="https://wa.me/2389963939" target="_blank" rel="external"><ion-icon name="logo-whatsapp"></ion-icon></a>
-                </div>
-                <a href="#">Download CV</a>
+                <ul id="redes-sociais">
+                    <li class="rede">
+                        <a href="https://github.com/vandinelsonrocha" target="_blank" rel="external"><ion-icon name="logo-github"></ion-icon></a>
+                    </li>
+                    <li class="rede">
+                        <a href="https://www.linkedin.com/in/vandy-gomes/" target="_blank" rel="external"><ion-icon name="logo-linkedin"></ion-icon></a>
+                    </li>
+                    <li class="rede">
+                        <a href="https://wa.me/2389963939" target="_blank" rel="external"><ion-icon name="logo-whatsapp"></ion-icon></a>
+                    </li>
+                    <li class="curriculum"><a href="#">Download CV</a></li>
+                </ul>
             </div>
             <img src="img/Vandy.jpg" alt="Minha foto de apresentação">
         </section>
@@ -182,21 +188,6 @@
                     <div class="swiper-slide">
                         <div class="wrapper">
                             <div class="image">
-                                <img src="img/logo-figma.png" alt="Logo do Figma">
-                                <span>Figma</span>
-                                <div class="content">
-                                    <h1>Figma</h1>
-                                    <p>
-                                        Ultimamente ganhei bastante interesse pelo design e desde então tenho aprofundado particularmente em design de interfaces de usuário usando o Figma. Acredito que com esses conhecimentos eu possa fazer implementações mais precisas, interfaces de usuário melhores e maior autonomia no processo de desenvolvimento.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <div class="wrapper">
-                            <div class="image">
                                 <img src="img/logo-sass.png" alt="Logo do Sass">
                                 <span>Sass</span>
                                 <div class="content">
@@ -302,7 +293,6 @@
             <ul aria-label="Navegação entre modelos específicos de projeto">
                 <li id="todos" class="ativo">Todos</li>
                 <li id="website">WebSites</li>
-                <li id="design">UI Design</li>
                 <li id="outros">Outros</li>
             </ul>
         </div>
@@ -351,20 +341,6 @@
                     </a>
                     <a href="" class="repositorio" target="_blank" rel="external">Repositório</a>
                 </li>
-                <li class="projeto design">
-                    <div class="imagem-projeto">
-                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
-                        <p class="techs"></p>
-                    </div>
-                    <div class="repositorio">Repositório</div>
-                </li>
-                <li class="projeto design">
-                    <div class="imagem-projeto">
-                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
-                        <p class="techs"></p>
-                    </div>
-                    <div class="repositorio">Repositório</div>
-                </li>
                 <li class="projeto website">
                     <div class="imagem-projeto">
                         <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
@@ -373,20 +349,6 @@
                     <div class="repositorio">Repositório</div>
                 </li>
                 <li class="projeto website">
-                    <div class="imagem-projeto">
-                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
-                        <p class="techs"></p>
-                    </div>
-                    <div class="repositorio">Repositório</div>
-                </li>
-                <li class="projeto design">
-                    <div class="imagem-projeto">
-                        <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
-                        <p class="techs"></p>
-                    </div>
-                    <div class="repositorio">Repositório</div>
-                </li>
-                <li class="projeto design">
                     <div class="imagem-projeto">
                         <img src="img/em-breve.png" alt="Projeto a ser desenvolvido em breve">
                         <p class="techs"></p>
@@ -474,6 +436,11 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <!--LINK JAVASCRIPT DA API Swiperjs-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <div class="gtranslate_wrapper"></div>
+    <script>window.gtranslateSettings = {"default_language":"pt","languages":["pt","en","es"],"wrapper_selector":".gtranslate_wrapper","flag_size":16,"switcher_horizontal_position":"right","switcher_vertical_position":"top","switcher_text_color":"#f7f7f7","switcher_arrow_color":"#f2f2f2","switcher_border_color":"#161616","switcher_background_color":"#303030","switcher_background_shadow_color":"#474747","switcher_background_hover_color":"#3a3a3a","dropdown_text_color":"#eaeaea","dropdown_hover_color":"#748393","dropdown_background_color":"#474747"}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/dwf.js" defer></script>
+
     <script src="_js/script.js"></script>
 </body>
 </html>
